# mock

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml
.github/workflows/: build.yml
migrations/: 1_create-tables.sql  2_create-audit-table.sql  3_add-timeout-to-log-table.sql  4_add-token-to-audit-table.sql
src/: main.rs
src/api/: bid_string.rs  mod.rs  user.rs
src/model/: audit.rs  bid_string.rs  config.rs  conflict.rs  http_error.rs  log.rs  mock.rs  mod.rs  page_request.rs  response.rs  result.rs  user.rs
src/open_api/: bid_string.rs  user.rs
src/repository/: audit.rs  log.rs  macro.rs  mock.rs  mod.rs
src/routing/: audit.rs  call.rs  data.rs  index.rs  log.rs  mock.rs  mod.rs
