[package]
name = "mock"
version = "0.1.0"
edition = "2021"

[dependencies.chrono]
version = "0.4.38"
features = ["serde"]

[dependencies.rocket]
version = "0.5"
default-features = false
features = ["json"]

[dependencies.rocket_db_pools]
version = "0.1"
features = ["sqlx_sqlite"]

[dependencies.sqlx]
version = "0.7"
default-features = false
features = ["macros", "migrate", "chrono"]

[dependencies.rocket_okapi]
version = "0.8"
features = ["swagger", "rapidoc", "rocket_db_pools"]

[dependencies.schemars]
version = "0.8.16"
features = ["chrono"]
